[package]
name = "mb_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
capnp = "0.18.1"
capnpc = "0.18.0"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "^1.0"
tokio = { version = "^1.32.0", features = ["full"] }
futures = "0.3"
async-backtrace = "0.2"
rayon = { version = "^1.7", features = [] }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
